kubernetes/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mingres
  labels:
    name: mingres
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - $CI_COMMIT_REF_SLUG.$DOMAIN
      secretName: $CI_COMMIT_REF_SLUG-tls
  rules:
  - host: $CI_COMMIT_REF_SLUG.$DOMAIN
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring
            port: 
              number: 8082
